{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 40,
  "lineage": "8c27142a-bdd1-979e-6a9b-da9415007816",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7c2dd1bdac0f0c1",
            "domain": "vpc",
            "id": "eipalloc-0e7c2dd1bdac0f0c1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-60-41.compute-1.amazonaws.com",
            "public_ip": "3.222.60.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat"
            },
            "tags_all": {
              "Name": "Nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_eks_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:internet-gateway/igw-022cc7517d929cfb6",
            "id": "igw-022cc7517d929cfb6",
            "owner_id": "590184107240",
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "dependencies": [
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_eks_Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e7c2dd1bdac0f0c1",
            "association_id": "eipassoc-087590ab14e003fed",
            "connectivity_type": "public",
            "id": "nat-089c22607fd1cd314",
            "network_interface_id": "eni-0a5daf252b4ae3dde",
            "private_ip": "10.0.11.228",
            "public_ip": "3.222.60.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09da2fd71be191071"
          },
          "dependencies": [
            "aws_eip.terraform_Nat",
            "aws_subnet.terraform_eks_vpc_public_subnet",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_eks_vpc_private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:route-table/rtb-0063f12aacd30efe6",
            "id": "rtb-0063f12aacd30efe6",
            "owner_id": "590184107240",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-089c22607fd1cd314",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_eks_vpc_private_RT"
            },
            "tags_all": {
              "Name": "terraform_eks_vpc_private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform_Nat",
            "aws_nat_gateway.terraform_eks_Nat",
            "aws_subnet.terraform_eks_vpc_public_subnet",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_eks_vpc_public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:route-table/rtb-004cd5f240e99c032",
            "id": "rtb-004cd5f240e99c032",
            "owner_id": "590184107240",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022cc7517d929cfb6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_eks_vpc_RT"
            },
            "tags_all": {
              "Name": "terraform_eks_vpc_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_eks_vpc_igw",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_eks_vpc_RT_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d667b656b742fda",
            "route_table_id": "rtb-0063f12aacd30efe6",
            "subnet_id": "subnet-0db078174829f7d8d"
          },
          "dependencies": [
            "aws_eip.terraform_Nat",
            "aws_nat_gateway.terraform_eks_Nat",
            "aws_route_table.terraform_eks_vpc_private_RT",
            "aws_subnet.terraform_eks_vpc_private_subnets",
            "aws_subnet.terraform_eks_vpc_public_subnet",
            "aws_vpc.terraform_eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0044532cbc35d57a9",
            "route_table_id": "rtb-0063f12aacd30efe6",
            "subnet_id": "subnet-03ed0b5a21bcdebc5"
          },
          "dependencies": [
            "aws_eip.terraform_Nat",
            "aws_nat_gateway.terraform_eks_Nat",
            "aws_route_table.terraform_eks_vpc_private_RT",
            "aws_subnet.terraform_eks_vpc_private_subnets",
            "aws_subnet.terraform_eks_vpc_public_subnet",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_eks_vpc_RT_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d381faf57eda341d",
            "route_table_id": "rtb-004cd5f240e99c032",
            "subnet_id": "subnet-046d7cf9e28582762"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_eks_vpc_igw",
            "aws_route_table.terraform_eks_vpc_public_RT",
            "aws_subnet.terraform_eks_vpc_public_subnet",
            "aws_vpc.terraform_eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0226d026f6db9aee3",
            "route_table_id": "rtb-004cd5f240e99c032",
            "subnet_id": "subnet-09da2fd71be191071"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_eks_vpc_igw",
            "aws_route_table.terraform_eks_vpc_public_RT",
            "aws_subnet.terraform_eks_vpc_public_subnet",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:security-group/sg-00eda945201131b86",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00eda945201131b86",
            "ingress": [],
            "name": "terraform_eks_sg",
            "name_prefix": "",
            "owner_id": "590184107240",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_in_5001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5001,
            "id": "sgrule-2163070933",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00eda945201131b86",
            "security_group_rule_id": "sgr-0804fed708f928e2f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_eks_sg",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-961881090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00eda945201131b86",
            "security_group_rule_id": "sgr-0cfc669e1348f7af2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_eks_sg",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2820070900",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00eda945201131b86",
            "security_group_rule_id": "sgr-0a68e152f44a6fb8d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_eks_sg",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_out_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1547720117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00eda945201131b86",
            "security_group_rule_id": "sgr-02c341cb1b10a2e72",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_eks_sg",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_out_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2077570299",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00eda945201131b86",
            "security_group_rule_id": "sgr-0d24751b36c28c3c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform_eks_sg",
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_eks_vpc_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:subnet/subnet-0db078174829f7d8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db078174829f7d8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184107240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-subnet-us-east-1a",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "terraform-subnet-us-east-1a",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "dependencies": [
            "aws_vpc.terraform_eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:subnet/subnet-03ed0b5a21bcdebc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ed0b5a21bcdebc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184107240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-subnet-us-east-1b",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "terraform-subnet-us-east-1b",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "dependencies": [
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_eks_vpc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:subnet/subnet-046d7cf9e28582762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046d7cf9e28582762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184107240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-subnet-us-east-1a",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-subnet-us-east-1a",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "dependencies": [
            "aws_vpc.terraform_eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:subnet/subnet-09da2fd71be191071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/23",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09da2fd71be191071",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184107240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-subnet-us-east-1b",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-subnet-us-east-1b",
              "kubernetes.io/cluster/terraform-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d12612556b41e3c"
          },
          "dependencies": [
            "aws_vpc.terraform_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184107240:vpc/vpc-05d12612556b41e3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-060d0e2c3340a1426",
            "default_route_table_id": "rtb-04406fefb8ca4ff2b",
            "default_security_group_id": "sg-0d58609be940bf428",
            "dhcp_options_id": "dopt-02bf7252d40611d31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d12612556b41e3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04406fefb8ca4ff2b",
            "owner_id": "590184107240"
          }
        }
      ]
    }
  ]
}